Unit2/C_basic/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:02:49 **** Incremental Build of configuration Debug for project Assi_2_5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_5.o" "..\\src\\Assi_2_5.c" 
..\src\Assi_2_5.c: In function 'main':
..\src\Assi_2_5.c:19:9: error: 'A' undeclared (first use in this function)
  if ((x>A) && (x<Z)){
         ^
..\src\Assi_2_5.c:19:9: note: each undeclared identifier is reported only once for each function it appears in
..\src\Assi_2_5.c:19:18: error: 'Z' undeclared (first use in this function)
  if ((x>A) && (x<Z)){
                  ^
23:02:54 **** Incremental Build of configuration Debug for project Assi_2_5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_5.o" "..\\src\\Assi_2_5.c" 
..\src\Assi_2_5.c: In function 'main':
..\src\Assi_2_5.c:19:9: error: 'A' undeclared (first use in this function)
  if ((x>A) && (x<Z)){
         ^
..\src\Assi_2_5.c:19:9: note: each undeclared identifier is reported only once for each function it appears in
..\src\Assi_2_5.c:19:18: error: 'Z' undeclared (first use in this function)
  if ((x>A) && (x<Z)){
                  ^
23:03:57 **** Incremental Build of configuration Debug for project Assi_2_5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_5.o" "..\\src\\Assi_2_5.c" 
gcc -o Assi_2_5.exe "src\\Assi_2_5.o" 
23:04:11 **** Incremental Build of configuration Debug for project Assi_2_5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_5.o" "..\\src\\Assi_2_5.c" 
gcc -o Assi_2_5.exe "src\\Assi_2_5.o" 
Info: Nothing to build for Assi_2_5
